# marsha

./: .babelrc  .babelrc.js  .dockerignore  .gitattributes  .gitignore  .gitlint  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  UPGRADE.md  arnold.yml  docker-compose.yml  jest.config.js  package.json  pylintrc  react-scanner.config.js  readthedocs.yml  renovate.json  report.json  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.circleci/: config.yml  (+1 more)
src/backend/: .bandit  manage.py  pylintrc  setup.cfg
src/backend/locale/es_ES/LC_MESSAGES/: django.po
src/backend/locale/fr_CA/LC_MESSAGES/: django.po
src/backend/locale/fr_FR/LC_MESSAGES/: django.po
src/backend/marsha/: asgi.py  celery_app.py  settings.py  test_runner.py  urls.py  workers.py
src/backend/marsha/.cookiecutter/: cookiecutter.json
src/backend/marsha/.cookiecutter/hooks/: post_gen_project.sh
src/backend/marsha/.cookiecutter/{{cookiecutter.app_name}}/: __init__.py  admin.py  api.py  apps.py  defaults.py  factories.py  forms.py  lti_select.py  models.py  serializers.py  urls.py  views.py
src/backend/marsha/account/: api.py  apps.py  checks.py  factories.py  middleware.py  models.py  serializers.py  urls.py  views.py
src/backend/marsha/account/backends/: saml_fer.py
src/backend/marsha/account/migrations/: 0001_initial.py  0002_alter_idporganizationassociation_unique_together_and_more.py
src/backend/marsha/account/social_backends/: renater_saml.py
src/backend/marsha/account/social_pipeline/: __init__.py  organization.py  playlist.py  social_auth.py
src/backend/marsha/account/social_testing/: __init__.py  certificates.py  saml_tools.py  settings.py  urls.py  views.py
src/backend/marsha/account/social_utils/: __init__.py  renater_parser.py
src/backend/marsha/account/tests/: __init__.py  test_checks.py  test_middleware.py  test_models.py  test_social_backends_renater_saml.py  test_social_pipeline_organization.py  test_social_pipeline_playlist.py  test_social_pipeline_social_auth.py  test_social_utils_renater_parser.py  test_views.py  test_views_model_auth.py  test_views_social_edu_federation_saml_auth.py  test_views_social_renater_saml_auth.py  utils.py
src/backend/marsha/account/views/: __init__.py  model_auth.py  social_edu_federation_saml_auth.py  social_renater_saml_auth.py
src/backend/marsha/bbb/: __init__.py  admin.py  api.py  apps.py  defaults.py  factories.py  forms.py  lti_select.py  metadata.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/backend/marsha/bbb/migrations/: 0001_initial.py  0002_remove_meeting_started_on_meeting_ended_and_more.py  0003_alter_meeting_moderator_password_and_more.py  0004_meeting_estimated_duration_meeting_starting_at_and_more.py  0005_meeting_deleted_by_cascade.py  0006_alter_meeting_moderator_password_and_more.py  0007_classroom_rename_meeting_to_classroom.py  0008_alter_classroom_deleted.py  0009_classroomdocument.py  0010_alter_classroom_options_and_more.py  0011_classroomrecording.py  0012_alter_classroomdocument_options.py  0013_classroom_tools_parameters.py  0014_alter_classroomrecording_classroom.py  0014_classroomsharednote.py  0015_classroomrecording_vod.py  0016_classroom_recording_purpose.py  0017_classroom_recording_vod_delete_cascade.py  0018_classroom_created_by.py  0018_classroom_instructor_token_classroom_public_token.py  0019_add_retention_date_to_classroom.py  0019_alter_classroomrecording_video_file_url_and_more.py  0020_alter_classroomrecording_video_file_url_and_more.py  0021_noop_alter_classroom_retention_date_and_more.py  0022_classroomsession_and_more.py  0023_classroom_infos.py  0024_classroomdocument_storage_location.py  0025_classroomdocument_fill_storage_location.py  0026_classroomdocument_fix_storage_location.py
src/backend/marsha/bbb/tests/: __init__.py  test_api.py  test_bbb_utils.py  test_command_refresh_bbb_recordings.py  test_command_rename_classroom_documents.py  test_command_update_pending_classroom_sessions.py  test_delete_outdated_classrooms.py  test_models.py  test_utils_bbb.py  test_utils_tokens.py  test_views_lti.py  test_views_lti_config.py  test_views_lti_select.py  utils.py
src/backend/marsha/bbb/utils/: __init__.py  bbb_utils.py  tokens.py
src/backend/marsha/core/: admin.py  admin_site.py  api.py  apps.py  cache.py  defaults.py  exceptions.py  factories.py  fields.py  forms.py  lti.py  lti_select.py  managers.py  metadata.py  permissions.py  routers.py  sentry.py  serializers.py  signals.py  static.py  stats.py  storage.py  validators.py  views.py  xapi.py
src/backend/marsha/core/api/: __init__.py  account.py  base.py  file.py  live_registration.py  live_session.py  lti_user_association.py  pairing_challenge.py  playlist.py  playlist_access.py  portability_request.py  schema.py  shared_live_media.py  thumbnail.py  timed_text_track.py  video.py  xapi.py
src/backend/marsha/core/lti/: __init__.py  common.py  user_association.py  utils.py  validator.py
src/backend/marsha/core/migrations/: 0001_initial.py  0002_auto_20181221_0847.py  0003_auto_20180915_1117.py  0003_auto_20190108_1712.py  0004_auto_20190112_1043.py  0005_auto_20190112_1046.py  0006_auto_20181004_0909.py  0006_auto_20190114_1650.py  0007_auto_20190119_0757.py  0007_auto_20190122_1135.py  (+94 more)
src/backend/marsha/deposit/: __init__.py  admin.py  api.py  apps.py  defaults.py  factories.py  forms.py  lti_select.py  metadata.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/backend/marsha/development/: __init__.py  api.py  apps.py  urls.py  views.py
src/backend/marsha/e2e/: conftest.py  test_lti.py  test_lti_bbb.py  test_lti_markdown.py  test_site.py
src/backend/marsha/markdown/: __init__.py  admin.py  api.py  apps.py  defaults.py  factories.py  forms.py  lti_select.py  metadata.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/backend/marsha/page/: __init__.py  admin.py  api.py  apps.py  factories.py  models.py  serializers.py  urls.py
src/backend/marsha/websocket/: __init__.py  application.py  apps.py  defaults.py  layers.py  routing.py
(+3798 files in other folders)
