[metadata]
name = marsha
description = A FUN video provider for Open edX
long_description = file:README.rst
version = 0.0.1.dev0
author = Stéphane "Twidi" Angel
author_email = s.angel@twidi.com
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Framework :: Django
    Framework :: Django :: 2.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
keywords =
    video
    open-edx
    accessibility
    a11y
url = https://github.com/openfun/marsha
requires-python = >=3.6

[options]
zip_safe = True
packages = find:
install_requires =
    django>=2
    dj-database-url
    django-configurations
    django-extensions

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    # the ones provided with django are made unusable by django-configurations
    django-admin = configurations.management:execute_from_command_line
    django-admin.py = configurations.management:execute_from_command_line

[options.extras_require]
# flake8 is now at 3.5 and break with pycodestyle 2.4+, so both have their version pinned
dev =
    black
    flake8==3.5
    flake8-bugbear
    flake8-comprehensions
    flake8-formatter-abspath
    flake8-imports
    flake8-mypy
    flake8-docstrings
    ipython
    isort
    mypy
    pycodestyle<2.4
    pydocstyle
    pylint
    pylint-django
    pytest
    pytest-cov
    pytest-mock
    python-coveralls
    sphinx
    sphinx-autodoc-annotation
    sphinx_rtd_theme
    sphinxcontrib-django
    wheel

# used by read-the-doc because it has no needs for all the dev dependencies
docs =
    sphinx
    sphinx-autodoc-annotation
    sphinx_rtd_theme
    sphinxcontrib-django

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
# because of django models for example
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
python_version = 3.6
strict_optional = true
warn_incomplete_stub = true

[mypy-marsha.settings]
ignore_errors = True

[flake8]
ignore =
    # Line too long: we let black manage it
    E501
    # Line break occurred before a binary operator: we let black manage it
    W503
max-line-length = 99
max-complexity = 15
select =
    # flake8 error class
    F
    # mccabe plugin
    C
    # pycodestyle plugin
    E
    W
    # docstrings (using pydocstyle) plugin
    D
    # mypy plugin
    T4
    # bugbear plugin
    B
    B9
    B950
exclude =
    manage.py
    stubs.py
    */migrations/*.py

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts =
    --cov=marsha
    --cov-report term-missing
    --doctest-modules
    --ignore setup.py
    --pyargs

[coverage:run]
branch = True

[isort]
combine_as_imports=1
default_section=THIRDPARTY
force_sort_within_sections=1
from_first=1
include_trailing_comma=1
indent='    '
known_django=django
known_first_party=marsha
line_length=88
lines_after_imports=2
multi_line_output=3
not_skip = __init__.py
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=1
