[metadata]
name = marsha
description = A FUN video provider for Open edX
long_description = file:README.rst
version = 0.0.1.dev0
author = Stéphane "Twidi" Angel
author_email = s.angel@twidi.com
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Framework :: Django
    Framework :: Django :: 2.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
keywords =
    video
    open-edx
    accessibility
    a11y
url = https://github.com/openfun/marsha
requires-python = >=3.6

[options]
zip_safe = True
packages = find:
install_requires =
    django>=2
    dj-database-url
    django-configurations
    django-extensions
    # django 2 support from version 1.21, but still alpha release
    django-postgres-extra>=1.21a4
    django-safedelete>=0.4
    # Warning from psycopg2 "The psycopg2 wheel package will be renamed from release 2.8" => psyopg2-binary
    psycopg2-binary

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    # the ones provided with django are made unusable by django-configurations
    django-admin = configurations.management:execute_from_command_line
    django-admin.py = configurations.management:execute_from_command_line

[options.extras_require]
# flake8 is now at 3.5 and break with pycodestyle 2.4+, so both have their version pinned
dev =
    black
    factory_boy
    flake8==3.5
    flake8-bugbear
    flake8-comprehensions
    flake8-formatter-abspath
    flake8-imports
    flake8-docstrings
    flake8-pep3101
    flake8-per-file-ignores
    ipython
    isort
    mypy
    pycodestyle<2.4
    pydocstyle
    pylint
    pylint-django
    pytest
    pytest-cov
    pytest-mock
    sphinx
    sphinx-autodoc-annotation
    sphinx_rtd_theme
    sphinxcontrib-django
    wheel

# used by read-the-doc because it has no needs for all the dev dependencies
docs =
    sphinx
    sphinx-autodoc-annotation
    sphinx_rtd_theme
    sphinxcontrib-django

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
# because of django models for example
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
python_version = 3.6
strict_optional = true
warn_incomplete_stub = true

[mypy-marsha.settings]
ignore_errors = True

## cannot use "mypy-marsha.*.tests.*" since mypy 0.6
[mypy-marsha.core.tests.*]
ignore_errors = True

[flake8]
max-line-length = 99
exclude =
    .git
    .venv
    build
    dist
    docs
    manage.py
    venv
    __pycache__
    *.egg-info
    */migrations/*
    stubs.py

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    marsha

[coverage:run]
branch = True

[isort]
combine_as_imports=1
default_section=THIRDPARTY
force_sort_within_sections=1
from_first=1
include_trailing_comma=1
indent='    '
known_django=django
known_first_party=marsha
line_length=88
lines_after_imports=2
multi_line_output=3
not_skip = __init__.py
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=1
