[metadata]
name = marsha
description = A FUN video provider for Open edX
long_description = file:README.rst
version = 0.0.1.dev0
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Framework :: Django
    Framework :: Django :: 2.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
keywords =
    video
    open-edx
    accessibility
    a11y
url = https://github.com/openfun/marsha
requires-python = >=3.6

[options]
zip_safe = True
packages = find:
install_requires =
    django>=2
    dj-database-url
    django-configurations
    django-extensions
    # django 2 support from version 1.21, but still alpha release
    django-postgres-extra>=1.21a4
    django-safedelete>=0.4
    # Warning from psycopg2 "The psycopg2 wheel package will be renamed from release 2.8" => psyopg2-binary
    psycopg2-binary
    pylti
    nameparser
[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    # the ones provided with django are made unusable by django-configurations
    django-admin = configurations.management:execute_from_command_line
    django-admin.py = configurations.management:execute_from_command_line

[options.extras_require]
# flake8 is now at 3.5 and break with pycodestyle 2.4+, so both have their version pinned
dev =
    black
    factory_boy
    flake8==3.5
    flake8-bugbear
    flake8-comprehensions
    flake8-formatter-abspath
    flake8-imports
    flake8-docstrings
    flake8-pep3101
    flake8-per-file-ignores
    ipython
    isort
    pycodestyle<2.4
    pylint
    pylint-django
    pytest
    pytest-cov
    pytest-mock
    wheel

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude =
    .git
    .venv
    build
    dist
    docs
    manage.py
    venv
    __pycache__
    *.egg-info
    */migrations/*
    stubs.py

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    marsha

[coverage:run]
branch = True

[isort]
combine_as_imports=1
default_section=THIRDPARTY
force_sort_within_sections=1
from_first=1
include_trailing_comma=1
indent='    '
known_django=django
known_first_party=marsha
line_length=88
lines_after_imports=2
multi_line_output=3
not_skip = __init__.py
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=1
