[metadata]
name = marsha
description = A FUN video provider for Open edX
version = 5.0.1
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Framework :: Django
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    video
    open-edx
    accessibility
    a11y
url = https://github.com/openfun/marsha
requires-python = >=3.9

[options]
install_requires =
    Brotli==1.1.0
    boto3==1.34.149
    celery==5.4.0
    channels-redis==4.2.0
    channels[daphne]==4.1.0
    chardet==5.2.0
    coreapi==2.3.3
    cryptography==43.0.0
    dj-database-url==2.2.0
    dj-rest-auth==6.0.0
    django-configurations==2.5.1
    django-cors-headers==4.4.0
    django-extensions==3.2.3
    django-filter==24.2
    django-parler==2.3
    django-redis==5.4.0
    django-safedelete==1.4.0
    django-storages==1.14.4
    django-peertube-runner-connector==0.6.0
    django-waffle==4.1.0
    Django<5
    djangorestframework==3.15.2
    djangorestframework_simplejwt==5.3.1
    dockerflow==2024.4.2
    drf-spectacular==0.27.2
    gunicorn==22.0.0
    logging-ldp==0.0.7
    lxml==5.2.2
    oauthlib==3.2.2
    Pillow==10.4.0
    psycopg[binary]==3.2.1
    pycaption==2.2.11
    PyMuPDF==1.24.9
    python-dateutil==2.9.0.post0
    requests==2.32.3
    sentry-sdk==2.11.0
    social-auth-app-django==5.4.2
    social-auth-core[saml]==4.5.4
    social-edu-federation==2.1.1
    urllib3==2.0.7
    uvicorn[standard]==0.30.3
    whitenoise==6.7.0
    xmpppy==0.7.1

# App BBB
    xmltodict==0.13.0
packages = find:
package_dir =
    =.
zip_safe = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
# the ones provided with django are made unusable by django-configurations
    django-admin = configurations.management:execute_from_command_line
    django-admin.py = configurations.management:execute_from_command_line

[options.extras_require]
dev =
    bandit==1.7.9
    black==24.4.2
    cookiecutter==2.6.0
    factory_boy==3.3.0
    flake8==7.1.0
    ipython==8.26.0
    isort==5.13.2
    pdbpp==0.10.3
    pycodestyle==2.12.0
    pylint-django==2.5.5
    pylint-plugin-utils==0.8.2
    pylint==3.2.6
    pytest-cov==5.0.0
    pytest-django==4.8.0
    pytest-mock==3.14.0
    pytest<8.0.0
    responses==0.25.3
    signxml==3.2.2
    wheel==0.43.0

e2e =
    playwright==1.45.1
    pytest-playwright==0.5.1
# mcr.microsoft.com/playwright:jammy requires tzdata
    tzdata==2024.1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude =
    .cookiecutter
    .git
    .venv
    build
    dist
    docs
    manage.py
    venv
    __pycache__
    *.egg-info
    */migrations/*
    stubs.py

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    marsha

[coverage:run]
branch = True

[isort]
combine_as_imports = 1
default_section = THIRDPARTY
force_sort_within_sections = 1
from_first = 1
include_trailing_comma = 1
indent = '    '
known_django = django
known_first_party = marsha
line_length = 88
lines_after_imports = 2
multi_line_output = 3
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
extend_skip = .cookiecutter
use_parentheses = 1
