[metadata]
name = marsha
description = A FUN video provider for Open edX
version = 5.7.0
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Framework :: Django
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    video
    open-edx
    accessibility
    a11y
url = https://github.com/openfun/marsha
requires-python = >=3.9

[options]
install_requires =
    Brotli==1.1.0
    boto3==1.35.85
    celery==5.4.0
    channels-redis==4.2.1
    channels[daphne]==4.2.0
    chardet==5.2.0
    coreapi==2.3.3
    cryptography==44.0.0
    dj-database-url==2.3.0
    dj-rest-auth==7.0.0
    django-configurations==2.5.1
    django-cors-headers==4.6.0
    django-extensions==3.2.3
    django-filter==24.3
    django-parler==2.3
    django-redis==5.4.0
    django-safedelete==1.4.0
    django-storages==1.14.3
    django-peertube-runner-connector==0.12.1
    django-waffle==4.2.0
    Django==5.0.9
    djangorestframework==3.15.2
    djangorestframework_simplejwt==5.3.1
    dockerflow==2024.4.2
    drf-spectacular==0.28.0
    ffmpeg-python==0.2.0
    gunicorn==23.0.0
    logging-ldp==0.0.7
    lxml==5.3.0
    oauthlib==3.2.2
    Pillow==11.0.0
    psycopg[binary]==3.2.3
    pycaption==2.2.15
    PyMuPDF==1.25.1
    python-dateutil==2.9.0.post0
    requests==2.32.3
    sentry-sdk==2.19.2
    social-auth-app-django==5.4.2
    social-auth-core[saml]==4.5.4
    social-edu-federation==2.1.1
    urllib3==2.2.3
    uvicorn[standard]==0.34.0
    whitenoise==6.8.2
    xmlsec==1.3.15
    xmpppy==0.7.1

# App BBB
    xmltodict==0.14.2
packages = find:
package_dir =
    =.
zip_safe = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
# the ones provided with django are made unusable by django-configurations
    django-admin = configurations.management:execute_from_command_line
    django-admin.py = configurations.management:execute_from_command_line

[options.extras_require]
dev =
    bandit==1.8.0
    black==24.10.0
    cookiecutter==2.6.0
    factory_boy==3.3.1
    flake8==7.1.1
    ipython==8.31.0
    isort==5.13.2
    pdbpp==0.10.3
    pycodestyle==2.12.1
    pylint-django==2.6.1
    pylint-plugin-utils==0.8.2
    pylint==3.3.2
    pytest-cov==6.0.0
    pytest-django==4.9.0
    pytest-mock==3.14.0
    pytest==8.3.4
    responses==0.25.3
    signxml==4.0.3
    wheel==0.45.1

e2e =
    playwright==1.49.1
    pytest-playwright==0.6.2
# mcr.microsoft.com/playwright:jammy requires tzdata
    tzdata==2024.2

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude =
    .cookiecutter
    .git
    .venv
    build
    dist
    docs
    manage.py
    venv
    __pycache__
    *.egg-info
    */migrations/*
    stubs.py

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    marsha

[coverage:run]
branch = True

[isort]
combine_as_imports = 1
default_section = THIRDPARTY
force_sort_within_sections = 1
from_first = 1
include_trailing_comma = 1
indent = '    '
known_django = django
known_first_party = marsha
line_length = 88
lines_after_imports = 2
multi_line_output = 3
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
extend_skip = .cookiecutter
use_parentheses = 1
