[metadata]
name = marsha
description = A FUN video provider for Open edX
version = 5.10.0
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Framework :: Django
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    video
    open-edx
    accessibility
    a11y
url = https://github.com/openfun/marsha
requires-python = >=3.9

[options]
install_requires =
    Brotli==1.1.0
    boto3==1.38.5
    celery==5.5.2
    channels-redis==4.2.1
    channels[daphne]==4.2.2
    chardet==5.2.0
    coreapi==2.3.3
    cryptography==44.0.2
    dj-database-url==2.3.0
    dj-rest-auth==7.0.1
    django-configurations==2.5.1
    django-cors-headers==4.7.0
    django-extensions==4.1
    django-filter==25.1
    django-parler==2.3
    django-redis==5.4.0
    django-safedelete==1.4.1
    django-storages==1.14.3
    django-peertube-runner-connector==0.12.1
    django-waffle==4.2.0
    Django==5.0.9
    djangorestframework==3.16.0
    djangorestframework_simplejwt==5.5.0
    dockerflow==2024.4.2
    drf-spectacular==0.28.0
    ffmpeg-python==0.2.0
    gunicorn==23.0.0
    logging-ldp==0.0.7
    lxml==5.4.0
    oauthlib==3.2.2
    Pillow==11.2.1
    psycopg[binary]==3.2.6
    pycaption==2.2.16
    PyMuPDF==1.25.5
    python-dateutil==2.9.0.post0
    requests==2.32.3
    sentry-sdk==2.27.0
    social-auth-app-django==5.4.3
    social-auth-core[saml]==4.6.1
    social-edu-federation==2.1.1
    urllib3==2.4.0
    uvicorn[standard]==0.34.2
    whitenoise==6.9.0
    xmlsec==1.3.15
    xmpppy==0.7.1

# App BBB
    xmltodict==0.14.2
packages = find:
package_dir =
    =.
zip_safe = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
# the ones provided with django are made unusable by django-configurations
    django-admin = configurations.management:execute_from_command_line
    django-admin.py = configurations.management:execute_from_command_line

[options.extras_require]
dev =
    bandit==1.8.3
    black==25.1.0
    cookiecutter==2.6.0
    factory_boy==3.3.3
    flake8==7.2.0
    ipython==9.2.0
    isort==6.0.1
    pdbpp==0.11.6
    pycodestyle==2.13.0
    pylint-django==2.6.1
    pylint-plugin-utils==0.8.2
    pylint==3.3.6
    pytest-cov==6.1.1
    pytest-django==4.11.1
    pytest-mock==3.14.0
    pytest==8.3.5
    responses==0.25.7
    signxml==4.0.3
    wheel==0.45.1

e2e =
    playwright==1.51.0
    pytest-playwright==0.7.0
# mcr.microsoft.com/playwright:jammy requires tzdata
    tzdata==2025.2

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude =
    .cookiecutter
    .git
    .venv
    build
    dist
    docs
    manage.py
    venv
    __pycache__
    *.egg-info
    */migrations/*
    stubs.py

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    marsha

[coverage:run]
branch = True

[isort]
combine_as_imports = 1
default_section = THIRDPARTY
force_sort_within_sections = 1
from_first = 1
include_trailing_comma = 1
indent = '    '
known_django = django
known_first_party = marsha
line_length = 88
lines_after_imports = 2
multi_line_output = 3
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
extend_skip = .cookiecutter
use_parentheses = 1
